correction of div alignment

--- a/blokus_react/src/styles/lobby/lobby.css
+++ b/blokus_react/src/styles/lobby/lobby.css
@@ -1,16 +1,29 @@
 .lobby-page{
     width: 100%;
     height: 100%;
+    background-image: url('lobby_background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left center;
     display: flex;
-    justify-content: space-evenly;
+    justify-content:baseline;
     flex-direction: column;
 }
 
 .upper-divs{
+    margin-top: 3%;
     width: 100%;
-    height: 100%;
+    height: 70%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.chat-div{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
     flex-direction: row;
 }
 
